[package]
name = "dfir-toolkit"
version = "0.7.5-dev"
edition = "2021"
authors = ["Jan Starke <jan.starke@posteo.de>", "Deborah Mahn <deborah.mahn@dfir-dd.de>"]
description = "CLI tools for digital forensics and incident response"
homepage = "https://www.github.com/dfir-dd/dfir_toolkit"
license = "GPL-3.0"

[[bin]]
name = "mactime2"
path = "src/bin/mactime2/main.rs"
required-features = ["mactime2"]

[[bin]]
name = "evtxscan"
path = "src/bin/evtxscan/main.rs"
required-features = ["evtxscan"]

[[bin]]
name = "evtxcat"
path = "src/bin/evtxcat/main.rs"
required-features = ["evtxcat"]

[[bin]]
name = "evtxls"
path = "src/bin/evtxls/main.rs"
required-features = ["evtxls"]

[[bin]]
name = "evtxanalyze"
path = "src/bin/evtxanalyze/main.rs"
required-features = ["evtxanalyze"]

[[bin]]
name = "evtx2bodyfile"
path = "src/bin/evtx2bodyfile/main.rs"
required-features = ["evtx2bodyfile"]

[[bin]]
name = "pol_export"
path = "src/bin/pol_export/main.rs"
required-features = ["pol_export"]

[[bin]]
name = "es4forensics"
path = "src/bin/es4forensics/main.rs"
required-features = ["elastic"]

[[bin]]
name = "regdump"
path = "src/bin/regdump/main.rs"
required-features = ["regdump"]

[[bin]]
name = "hivescan"
path = "src/bin/hivescan/main.rs"
required-features = ["hivescan"]

[[bin]]
name = "cleanhive"
path = "src/bin/cleanhive/main.rs"
required-features = ["cleanhive"]

[[bin]]
name = "ipgrep"
path = "src/bin/ipgrep/main.rs"
required-features = ["ipgrep"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["pol_export", "mactime2", "evtxtools", "regdump", "hivescan", "cleanhive", "ipgrep"]
mactime2 = ["gzip", "elastic", "chrono-tz", "thiserror", "bitflags", "encoding_rs_io"]
gzip = ["flate2"]
elastic = ["elasticsearch", "tokio", "futures", "serde_json", "sha2", "base64", "num-traits", "num-derive", "strum", "strum_macros", "tokio-async-drop"]
evtxtools = ["evtxscan", "evtxcat", "evtxls", "evtxanalyze", "evtx2bodyfile"]
pol_export = []
evtxscan = ["evtx"]
evtxcat = ["evtx", "colored_json", "term-table", "termsize"]
evtxls = ["evtx", "colored", "lazy-regex", "regex", "sigpipe", "dfirtk-eventdata"]
evtxanalyze = ["evtx", "dfirtk-sessionevent-derive", "dfirtk-eventdata"]
evtx2bodyfile = ["evtx", "getset", "ouroboros", "indicatif"]
ipgrep = []

regdump = ["nt_hive2"]
hivescan = ["nt_hive2"]
cleanhive = ["nt_hive2"]

[dependencies]
anyhow = "1.0"
binread = "2.2.0"
chrono = "0.4"
clap = {version = "4", features = ["derive", "wrap_help", "cargo"] }
clap-verbosity-flag = "2.0.0"
csv = "1.2.2"
encoding_rs = "0.8"
log = {version = "0.4", features = [ "release_max_level_info" ]}
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"
winstructs = "0.3.0"

clap-markdown = "0.1.3"
clap_complete = "4"
clio = {version="0.3", features=["clap-parse"] }
#clio = {path="../clio", features=["clap-parse"]}

# mactime2
chrono-tz = {version="0.8", optional=true}
serde_json = {version = "1", optional=true}
flate2 = {version="1", optional=true}
thiserror = {version="1", optional=true}
bitflags = {version="2", optional=true}
encoding_rs_io = {version="0.1", optional=true}

# evtxtools
dfirtk-eventdata = {version="0.1.2", optional=true}
dfirtk-sessionevent-derive = {version="0.1", optional=true}
evtx={version="0.8", optional=true}
colored_json = {version="3", optional=true}
term-table = {version = "1.3", optional=true}
termsize = {version = "0.1", optional=true}
regex = {version = "1", optional=true}
colored = {version = "2", optional=true}
lazy-regex = {version = "3.0.0", optional=true}
sigpipe = {version = "0", optional=true}
phf = {version = "0.11", optional=true}

# evtx2bodyfile
indicatif = {version="0.17", optional=true}
getset = {version="0.1", optional=true}
ouroboros = {version="0.18", optional=true}

# bodyfile, es4forensics
duplicate = "1"

# es4forensics
# requires libssl-dev
elasticsearch = {version="8.4.0-alpha.1", optional=true}
tokio = { version = "1", features = ["full"], optional=true }
tokio-async-drop = {version="0", optional=true}
futures = {version="0.3", optional=true }

sha2 = {version="0.10", optional=true}
base64 = {version="0.21", optional=true}
num-traits = {version="0.2", optional=true}
num-derive = {version="0", optional=true}
strum = { version = "0", features = ["derive"], optional=true }
strum_macros = {version="0", optional=true}

# nt-hive2
nt_hive2 = {version="4.0.1", optional=true}

[dev-dependencies]

# mactime2
more-asserts = "0.3"
rand = "0.8"

# bodyfile
matches = "0.1"

# es4forensics
assert-json-diff = "2.0"
