[package]
name = "dfirtk-eventdata"
version = "0.1.2"
edition = "2018"
authors = ["Jan Starke <Jan.Starke@telekom.de>"]
description = "CLI tools for digital forensics and incident response"
homepage = "https://www.github.com/janstarke/dfir_toolkit"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
evtx="0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
darling = "0.20"
quote = "1"
log = {version = "0.4", features = [ "release_max_level_info" ]}