[package]
name = "dfirtk-eventdata"
version = "0.1.3"
edition = "2018"
authors = ["Jan Starke <Jan.Starke@posteo.de>"]
description = "CLI tools for digital forensics and incident response"
repository = "https://github.com/dfir-dd/dfir_toolkit"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
evtx="0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
darling = "0.20"
quote = "1"
log = {version = "0.4"}
