[package]
name = "windows_types_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2"
log = {version = "0.4", features = [ "release_max_level_info" ]}
encoding_rs = "0.8"
winstructs = "0.3.0"
chrono = "0.4"